--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -68,6 +68,11 @@
     cursor: pointer;
 }
 
+.home_toggleButton:hover {
+    transform: scale(1.05);
+    transition: 0.3s;
+}
+
 /* Employee List */
 .home_employeeList {
     display: grid;
@@ -94,16 +99,31 @@
 /* Avatar */
 
 .home_avatar {
-    /* width: 80px; */
-    height: 80px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .home_avatar img {
+    align-content: center;
     width: 80px;
     height: 80px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 10px;
+}
+
+.home_avatarTable {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.home_avatarTable img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 /* Employee Info */
@@ -129,40 +149,30 @@
 .home_editButton,
 .home_viewButton,
 .home_deleteButton {
-    padding: 8px 12px;
+    padding: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
     cursor: pointer;
-    transition: background 0.3s ease-in-out;
-}
-
-.home_editButton {
-    background-color: #ffc107;
-    color: black;
+    transition: 0.3s ease-in-out;
 }
 
 .home_editButton:hover {
-    background-color: #e0a800;
+    background-color: #ffcc00;
+    color: #fff;
     transition: 0.3s;
-}
-
-.home_viewButton {
-    background-color: #17a2b8;
-    color: white;
 }
 
 .home_viewButton:hover {
-    background-color: #138496;
+    background-color: #007bff;
+    color: #fff;
     transition: 0.3s;
 }
 
-.home_deleteButton {
-    background-color: #dc3545;
-    color: white;
-}
-
 .home_deleteButton:hover {
-    background-color: #c82333;
+    background-color: #ff4d4d;
+    color: #fff;
     transition: 0.3s;
 }
 
